--- a/Views/Announcement/Create.cshtml
+++ b/Views/Announcement/Create.cshtml
@@ -16,6 +16,7 @@
     <div class="form-group">
         <label for="Category">Категорія</label>
         <select id="Category" name="Category" class="form-control" required>
+            <option value="">-- Оберіть категорію --</option>
             <option value="Побутова техніка">Побутова техніка</option>
             <option value="Комп'ютерна техніка">Комп'ютерна техніка</option>
             <option value="Смартфони">Смартфони</option>
@@ -27,7 +28,7 @@
     <div class="form-group">
         <label for="SubCategory">Підкатегорія</label>
         <select id="SubCategory" name="SubCategory" class="form-control" required>
-            <!-- Підкатегорії будуть змінюватися залежно від вибору категорії -->
+            <option value="">-- Оберіть підкатегорію --</option>
         </select>
     </div>
 
@@ -44,15 +45,14 @@
 </form>
 
 <script>
-    // JavaScript для оновлення підкатегорій на основі вибору категорії
     document.getElementById("Category").addEventListener("change", function () {
         var category = this.value;
         var subCategorySelect = document.getElementById("SubCategory");
 
-        // Очищаємо попередні підкатегорії
         subCategorySelect.innerHTML = "";
 
-        // В залежності від вибраної категорії додаємо відповідні підкатегорії
+        subCategorySelect.innerHTML += `<option value="">-- Оберіть підкатегорію --</option>`;
+
         if (category === "Побутова техніка") {
             subCategorySelect.innerHTML += `<option value="Холодильники">Холодильники</option>`;
             subCategorySelect.innerHTML += `<option value="Пральні машини">Пральні машини</option>`;
@@ -77,7 +77,5 @@
             subCategorySelect.innerHTML += `<option value="Іграшки">Іграшки</option>`;
         }
     });
-
-    // ініціалізація підкатегорій при початковому завантаженні сторінки
-    document.getElementById("Category").dispatchEvent(new Event("change"));
 </script>
+
